Wired all components into application service class. Created tests to ensure it returned correct items to controller.